--- a/DBTransactions/DBTransactions/appsettings.json
+++ b/DBTransactions/DBTransactions/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DBTransactions": "Server=.;Database=DBTransactions;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
