--- a/DBTransactions/DBTransactions/app.config
+++ b/DBTransactions/DBTransactions/app.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <!--<connectionStrings>
+    <add name="DBTransactions" connectionString="Server=.;Database=DBTransactions;Trusted_Connection=True;" providerName = "System.Data.SqlClient"/>
+  </connectionStrings>-->
   <runtime>
     <gcServer enabled="true"/>
   </runtime>
